src/objects/P7S1_Abonnement__c.object
<CustomObject>
    <description>Newsletter Abonnements für Portaluser und Kontakte</description>
    <fields>
        <fullName>P7S1_AbgeschlossenAm__c</fullName>
        <description>Beginn des Abonnements</description>
        <inlineHelpText>Beginn des Abonnements</inlineHelpText>
        <label>Abgeschlossen am</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_Aktiv__c</fullName>
        <description>Zeigt an, ob das Abonnement aktiv ist.</description>
        <formula>AND (  
  NOT(ISBLANK ( P7S1_AbgeschlossenAm__c )),
  P7S1_AbgeschlossenAm__c &lt;= NOW(),
  OR (
    ISBLANK ( P7S1_Kuendigungsdatum__c ),
    P7S1_Kuendigungsdatum__c &gt;= NOW(),
    AND(P7S1_Kuendigungsdatum__c &lt; NOW(), P7S1_AbgeschlossenAm__c &gt; P7S1_Kuendigungsdatum__c)
  )
)</formula>
        <inlineHelpText>Zeigt an, ob das Abonnement aktiv ist.</inlineHelpText>
        <label>Aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Kontakt der das Abonnement abgeschlossen hat</description>
        <inlineHelpText>Kontakt der das Abonnement abgeschlossen hat</inlineHelpText>
        <label>Kontakt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Abonnements</relationshipLabel>
        <relationshipName>Abonnements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Kuendigungsdatum__c</fullName>
        <description>Ende des Abonnements</description>
        <inlineHelpText>Ende des Abonnements</inlineHelpText>
        <label>Kündigungsdatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_Newsletter_Unsubscribe_Endpoint__c</fullName>
        <defaultValue>&quot;https://lr2sf-prosiebensat1.cs83.force.com/newsletterunsubscribe&quot;</defaultValue>
        <label>Newsletter Unsubscribe Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P7S1_Newsletter_Unsubscribe_Url__c</fullName>
        <formula>P7S1_Newsletter_Unsubscribe_Endpoint__c + &quot;?abonnementId=&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Newsletter Unsubscribe Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Newsletter__c</fullName>
        <description>Abonnement für Newsletter</description>
        <inlineHelpText>Abonnement für Newsletter</inlineHelpText>
        <label>Newsletter</label>
        <referenceTo>P7S1_Newsletter__c</referenceTo>
        <relationshipLabel>Abonnements</relationshipLabel>
        <relationshipName>Abonnements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>P7S1_PortalLogin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Abonnement durch Benutzer des Portals</description>
        <inlineHelpText>Abonnement durch Benutzer des Portals</inlineHelpText>
        <label>Portal Benutzer</label>
        <referenceTo>P7S1_PortalLogin__c</referenceTo>
        <relationshipLabel>Abonnements</relationshipLabel>
        <relationshipName>Abonnements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Abonnement</label>
    <listViews>
        <fullName>AboAktiv</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>P7S1_PortalLogin__c</columns>
        <columns>P7S1_Newsletter__c</columns>
        <columns>P7S1_AbgeschlossenAm__c</columns>
        <columns>P7S1_Kuendigungsdatum__c</columns>
        <columns>P7S1_Aktiv__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Aktiv__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Aktive Abos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AboInaktiv</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>P7S1_PortalLogin__c</columns>
        <columns>P7S1_Newsletter__c</columns>
        <columns>P7S1_AbgeschlossenAm__c</columns>
        <columns>P7S1_Kuendigungsdatum__c</columns>
        <columns>P7S1_Aktiv__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Aktiv__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Inaktive Abos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AboOhneKontakt</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>P7S1_PortalLogin__c</columns>
        <columns>P7S1_Newsletter__c</columns>
        <columns>P7S1_AbgeschlossenAm__c</columns>
        <columns>P7S1_Kuendigungsdatum__c</columns>
        <columns>P7S1_Aktiv__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Aktiv__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>P7S1_Contact__c</field>
            <operation>equals</operation>
        </filters>
        <label>Abos ohne Kontakt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AboOhnePL</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>P7S1_PortalLogin__c</columns>
        <columns>P7S1_Newsletter__c</columns>
        <columns>P7S1_AbgeschlossenAm__c</columns>
        <columns>P7S1_Kuendigungsdatum__c</columns>
        <columns>P7S1_Aktiv__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Aktiv__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>P7S1_PortalLogin__c</field>
            <operation>equals</operation>
        </filters>
        <label>Abos ohne Portal Login</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>P7S1_PortalLogin__c</columns>
        <columns>P7S1_Newsletter__c</columns>
        <columns>P7S1_AbgeschlossenAm__c</columns>
        <columns>P7S1_Kuendigungsdatum__c</columns>
        <columns>P7S1_Aktiv__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Abos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NL-Abo-{000000}</displayFormat>
        <label>Abonnement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abonnements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>